2006-02-16  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* AUTHORS:
	* MAINTAINERS: Add my information to the Maintainers and authors file

0.5.0:

2006-02-09  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/reference/Makefile.am: added a 'html' target to satisfy the dist
	rule

2006-02-08  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/context.h: Added a lot of documentation for the Cairo::Context
	class taken from the cairo docs.  It's not complete, but the basics are all
	covered now. 
	* docs/reference/Makefile.am: make use of existing Makefile variable
	* NEWS: update for 0.5.0 release

2006-02-07  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am: add docs/ subdir
	* configure.in: added an --enable-docs switch to the configure script
	(enabled by default), and added AC_OUTPUT directives for the documentation
	Makefiles, etc.
	* docs/.cvsignore:
	* docs/Makefile.am:
	* docs/reference/.cvsignore:
	* docs/reference/Doxyfile.in:
	* docs/reference/Makefile.am:
	* docs/reference/introduction.h: Added infrastructure to build and install
	the API documentation for cairomm (based on libxml++ makefiles).  

2006-01-27  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* .cvsignore:
	* cairomm/.cvsignore: update .cvsignore files
	* cairomm/surface.cc:
	* cairomm/surface.h: change Surface::create function to take a
	RefPtr<Surface> instead of Surface&

2006-01-27  Murray Cumming  <murrayc@murrayc.com>

	* examples/pdf-surface/Makefile.am: Remove extra LDADD that was breaking 
	the distcheck.

2006-01-26  Murray Cumming  <murrayc@murrayc.com>

	* examples/ps-surface/main.cc:
	* examples/svg-surface/main.cc: Correct the text of the messages.

2006-01-25  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in:
	* examples/Makefile.am: 
	* examples/pdf-surface/: 
	* examples/ps-surface/: 
	* examples/svg-surface/: add examples for additional surfaces

2006-01-24  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/Makefile.am: