@@ -1,0 +1,298 @@
+body {
+    font-family: sans-serif;
+    margin: 2em 6em;
+}
+h1, h2, h3  {
+    color: #2b5e82;
+}
+a:link, a:visited, a:active, a:hover {
+    text-decoration: none;
+    color: #3B80AE;
+}
+a:hover {
+    text-decoration: underline;
+}
+h1 {
+    text-align: center;
+    font-size: 160%;
+}
+h2 {
+    font-size: 140%;
+}
+h3 {
+    font-size: 130%;
+}
+caption { font-weight: bold }
+div.qindex {
+    width: 100%;
+    font-size: 90%;
+    background-color: #dedede;
+    border: 1px solid #CCCCCC;
+    text-align: center;
+    margin: 0.5em;
+    padding: 0.5em;
+    line-height: 150%;
+}
+DIV.nav {
+    width: 100%;
+    color: #FFFFFF;
+    background-color: #3B80AE;
+    text-align: center;
+    margin: 0.5em;
+    padding: 0.5em;
+    line-height: 140%;
+}
+
+div.nav a:link, div.nav a:visited  {
+    color: #FFFFFF !important;
+    text-decoration: underline;
+}
+div.navtab {
+    background-color: #dedede;
+    border: 1px solid #b0b0b0;
+    text-align: center;
+    margin: 2px;
+    margin-right: 15px;
+    padding: 2px;
+}
+td.navtab {
+    font-size: 70%;
+}
+a.qindex    {
+    font-weight: bold;
+}
+a.qindexHL {
+    text-decoration: none;
+    font-weight: bold;
+    background-color: #eeeeee;
+    border: 1px double #9295C2;
+}
+a.qindexHL:hover {
+    text-decoration: underline;
+}
+a.el, a.elRef { font-weight: bold }
+a.code:link { text-decoration: none; font-weight: normal; }
+a.code:visited { text-decoration: none; font-weight: normal; }
+a.codeRef:link { font-weight: normal;}
+a.codeRef:visited { font-weight: normal; }
+dl.el { margin-left: -1cm }
+.fragment {
+    font-family: Fixed, monospace;
+    font-size: 95%;
+}
+pre.fragment {
+    border: 1px solid #CCCCCC;
+    background-color: #f5f5f5;
+    color: #444444;
+    margin: 1em;
+    padding: 1em;
+}
+div.ah { background-color: black; font-weight: bold; color: #ffffff; margin-bottom: 3px; margin-top: 3px }
+td.md { font-weight: bold; font-family: monospace;}
+td.mdPrefix {
+    color: #606060;
+    font-size: 80%;
+}
+td.mdname1 { font-weight: normal; color: #666666; }
+td.mdname { font-weight: normal; color: #666666; width: 600px; }
+div.groupHeader {
+    margin-left: 16px;
+    margin-top: 12px;
+    margin-bottom: 6px;
+    font-weight: bold;
+}
+div.groupText { margin-left: 16px; font-style: italic; font-size: 90% }
+td.indexkey {
+    background-color: #dedede;
+    font-weight: bold;
+    padding-right  : 10px;
+    padding-top    : 2px;
+    padding-left   : 10px;
+    padding-bottom : 2px;
+    margin-left    : 0px;
+    margin-right   : 0px;
+    margin-top     : 2px;
+    margin-bottom  : 2px;
+    border: 1px solid #CCCCCC;
+}
+td.indexvalue {
+    background-color: #dedede;
+    font-style: italic;
+    padding-right  : 10px;
+    padding-top    : 2px;
+    padding-left   : 10px;
+    padding-bottom : 2px;
+    margin-left    : 0px;
+    margin-right   : 0px;
+    margin-top     : 2px;
+    margin-bottom  : 2px;
+    border: 1px solid #CCCCCC;
+}
+tr.memlist {
+    background-color: #f0f0f0; 
+}
+p.formulaDsp { text-align: center; }
+img.formulaDsp { }
+img.formulaInl { vertical-align: middle; }
+span.keyword       { color: #008000 }
+span.keywordtype   { color: #604020 }
+span.keywordflow   { color: #e08000 }
+span.comment       { color: #800000 }
+span.preprocessor  { color: #806020 }
+span.stringliteral { color: #002080 }
+span.charliteral   { color: #008080 }
+table.mdTable + table   {
+    margin-bottom: 4em;
+}
+.mdTable {
+    border: 1px solid #868686;
+    background-color: #DEDEDE;
+    width: 100%;
+}
+.mdRow {
+    padding: 8px 10px;
+}
+.mdescLeft {
+    padding: 0px 8px 4px 8px;
+    font-size: 80%;
+    font-style: italic;
+    background-color: #FAFAFA;
+    border-top: 1px none #E0E0E0;
+    border-right: 1px none #E0E0E0;
+    border-bottom: 1px none #E0E0E0;
+    border-left: 1px none #E0E0E0;
+    margin: 0px;
+}
+.mdescRight {
+    padding: 0px 8px 4px 8px;
+    font-size: 80%;
+    font-style: italic;
+    background-color: #FAFAFA;
+    border-top: 1px none #E0E0E0;
+    border-right: 1px none #E0E0E0;
+    border-bottom: 1px none #E0E0E0;
+    border-left: 1px none #E0E0E0;
+    margin: 0px;
+}
+.memItemLeft {
+    padding: 1px 0px 0px 8px;
+    margin: 4px;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-color: #E0E0E0;
+    border-right-color: #E0E0E0;
+    border-bottom-color: #E0E0E0;
+    border-left-color: #E0E0E0;
+    border-top-style: solid;
+    border-right-style: none;
+    border-bottom-style: none;
+    border-left-style: none;
+    background-color: #FAFAFA;
+    font-size: 80%;
+}
+.memItemRight {
+    padding: 1px 8px 0px 8px;
+    margin: 4px;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-color: #E0E0E0;
+    border-right-color: #E0E0E0;
+    border-bottom-color: #E0E0E0;
+    border-left-color: #E0E0E0;
+    border-top-style: solid;
+    border-right-style: none;
+    border-bottom-style: none;
+    border-left-style: none;
+    background-color: #FAFAFA;
+    font-size: 80%;
+}
+.memTemplItemLeft {
+    padding: 1px 0px 0px 8px;
+    margin: 4px;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-color: #E0E0E0;
+    border-right-color: #E0E0E0;
+    border-bottom-color: #E0E0E0;
+    border-left-color: #E0E0E0;
+    border-top-style: none;
+    border-right-style: none;
+    border-bottom-style: none;
+    border-left-style: none;
+    background-color: #FAFAFA;
+    font-size: 80%;
+}
+.memTemplItemRight {
+    padding: 1px 8px 0px 8px;
+    margin: 4px;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-color: #E0E0E0;
+    border-right-color: #E0E0E0;
+    border-bottom-color: #E0E0E0;
+    border-left-color: #E0E0E0;
+    border-top-style: none;
+    border-right-style: none;
+    border-bottom-style: none;
+    border-left-style: none;
+    background-color: #FAFAFA;
+    font-size: 80%;
+}
+.memTemplParams {
+    padding: 1px 0px 0px 8px;
+    margin: 4px;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-color: #E0E0E0;
+    border-right-color: #E0E0E0;
+    border-bottom-color: #E0E0E0;
+    border-left-color: #E0E0E0;
+    border-top-style: solid;
+    border-right-style: none;
+    border-bottom-style: none;
+    border-left-style: none;
+    color: #606060;
+    background-color: #FAFAFA;
+    font-size: 80%;
+}
+.search     {
+    color: #003399;
+    font-weight: bold;
+}
+form.search {
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+input.search {
+    font-size: 75%;
+    color: #000080;
+    font-weight: normal;
+    background-color: #dedede;
+}
+td.tiny      {
+    font-size: 75%;
+}
+.dirtab {
+    padding: 4px;
+    border-collapse: collapse;
+    border: 1px solid #b0b0b0;
+}
+th.dirtab {
+    background: #dedede;
+    font-weight: bold;
+}
+hr {
+    height: 1px;
+    border: none;
+    border-top: 1px solid black;
+}
